syntax = "proto3";
package protos.game.server.chat;





// 📢 Mensaje que los jugadores reciben en el chat
message OutgoingChatMessage {
    int32 playerId = 1;
    string playerName = 2;
    string message = 3;
    int64 timestamp_ms = 4;
    string channel = 5;  // 📌 Nuevo: canal del mensaje
}



// 📢 Mensajes del sistema (avisos, muteos, eventos)
message SystemMessage {
    string message = 1;
    SystemMessageType type = 2;
}



// 🎯 Enumeración de los tipos de mensajes del sistema
enum SystemMessageType {
    INFO = 0;
    WARNING = 1;
    ERROR = 2;
    MUTE_NOTIFICATION = 3;
}
