syntax = "proto3";
package protos.game.world;

message ServerWorldMessage  {
    oneof message {
        WorldStateUpdate world_state_update = 1;
    }
}
message WorldStateUpdate {
    repeated PlayerState players = 1;
   // repeated NpcState npcs = 2;
   // repeated ItemState items = 3;
    int64 timestamp = 4;
}

message PlayerState {
    int32 id = 1;
    string name = 2;
    float x = 3;
    float y = 4;
    int32 hp = 5;
    int32 mana = 6;
}

message NpcState {
    int32 id = 1;
    string type = 2;
    float x = 3;
    float y = 4;
    int32 hp = 5;
}

message ItemState {
    int32 id = 1;
    string name = 2;
    float x = 3;
    float y = 4;
}
